# Engineering

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/ai_agents/: negotiator.py  orchestrator.py
backend/app/core/: config.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: __init__.py  context.py  generation.py  stage.py
backend/app/routers/: stage0.py  stage1.py  stage10.py  stage11.py  stage2.py  stage3.py  stage4.py  stage5.py  stage6.py  stage7.py  stage8.py  stage9.py  v1.py
backend/app/services/: stage0.py  stage0_context.py  stage1.py  stage10.py  stage11.py  stage2.py  stage3.py  stage4.py  stage5.py  stage6.py  stage7.py  stage8.py  stage9.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_candidates.py
backend/shared/: __init__.py  cache.py  stage0_client.py
backend/tests/: test_negotiator.py  test_orchestrator.py  test_scheduler.py  test_stage0_ultra.py  test_stages0_7.py  test_stages8_11.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
ktm-pilot-starter/: README.md
ktm-pilot-starter/backend/: app.py  requirements.txt
ktm-pilot-starter/frontend/: index.html
ktm-pilot-starter/orchestrator/: dag.yaml
ktm-pilot-starter/sample-data/: sample-run.json
workers/: Dockerfile  __init__.py  export.py  massing.py  render.py
(+18 files in other folders)
