[project]
name = "godmode-backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
    "pytest",
    "pydantic-settings>=2.0.0",
    "shapely",
    "sqlalchemy>=2.0",
    "alembic",
    "python-multipart"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.setuptools.packages.find]
exclude = ["migrations"]
